# inspect

./: .gitignore  Cargo.toml  README.md  auto-slices-dump.md  autoresearch.checks.sh  autoresearch.md  autoresearch.sh  bench-agenthub.json  bench-sem.json  bench-weave.json  prompt-dump.md  slice-v2-grafana.md  slice-v2-keycloak.md
.amp/plugins/: autoresearch.jsonl  autoresearch.ts
agent/: package-lock.json  package.json
agent/extensions/: web-tools.ts
agent/src/: prompts.ts  review-diff-v2.ts  review-diff.ts  review-entry.ts  review-orchestrator.ts  review-parallel.ts  types.ts  (+10 more)
benchmarks/: BENCHMARK.md  SETUP.md  aacr_bench.py  autoresearch_bench.py  build_anchors.py  debug_failures.py  enrich_anchors.py  golden-bug-analysis.md  golden_anchors_auto.json  greptile_bench.py  greptile_judged.csv  greptile_raw.csv  heuristic_judge.py  improvements.md  iteration-log.md  martian_bench_v2.py  martian_eval.py  run_benchmark.py  run_diff_bench.py  run_diff_bench_v2.py  run_diff_bench_v3.py  run_diff_bench_v4.py  run_eval.py  run_martian_judge.py  run_martian_official.py
crates/inspect-cli/: Cargo.toml
crates/inspect-cli/src/: main.rs
crates/inspect-cli/src/commands/: bench.rs  comment.rs  diff.rs  file.rs  grep.rs  mod.rs  pr.rs  review.rs
crates/inspect-cli/src/formatters/: json.rs  markdown.rs  mod.rs  terminal.rs
docs/: .env  404.html  benchmarks.html  changelog.html  diagnostic-report.md  docs.html  index.html  index.txt  llms.txt  package.json  review-agent-v2-architecture.md  style.css  vercel.json
site/: next.config.ts  package-lock.json  package.json
(+87 files in other folders)
