[package]
name = "inspect-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inspect"
path = "src/main.rs"

[dependencies]
inspect-core = { path = "../inspect-core" }
sem-core = { path = "../../../sem/crates/sem-core" }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
